kubernetes/apps/default/echo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - "echo.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: echo
          namespace: default
          port: ${APP_PORT}
